# research

./: .gitignore  README.md  pyproject.toml
literature_review/notebooks/: search_string.ipynb
src/literature_review/search_string/: README.md  __init__.py  cli.py  database_configs.py  example.py  generator.py  query_builder.py
